fixes minor issues with scrollbar

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -4,13 +4,15 @@
   display: inline-block;
   overflow-x: hidden;
   height: 36px;
+  position: fixed;
+  top: 0px;
   .links {
     background-color: #0c1f2e;
     display: inline-block;
     width: 100%;
     height: 36px;
     ul {
-      display: inline-block;
+      display: block;
       width: 100%;
       height: 100%;
       list-style: none;
@@ -21,8 +23,12 @@
         list-style: none;
         margin: 0px;
         &.links-item {
-          padding: 5px 19px 0px 15px;
-          height: 31px;
+          padding: 0px 19px 0px 15px;
+          height: 36px;
+          vertical-align: middle;
+          &:last-child {
+            padding-right: 0px;
+          }
           &:hover {
             a, span {
               color: #fff;
@@ -34,8 +40,14 @@
           a, span {
             display: inline-block;
             vertical-align: middle;
-            padding-top: 3px;
+            padding-top: 8px;
+            //height: 36px;
           }
+        }
+        &.last {
+          padding: 0px 5px;
+          margin: 0px;
+          width: 20px;
         }
         &.logo {
           width: 69px;
