--- a/styles/screen.css
+++ b/styles/screen.css
@@ -42,49 +42,62 @@
   display: inline-block;
   overflow-x: hidden;
   height: 36px;
+  position: fixed;
+  top: 0px;
 }
-/* line 7, ../sass/base.scss */
+/* line 9, ../sass/base.scss */
 .custom-bar .links {
   background-color: #0c1f2e;
   display: inline-block;
   width: 100%;
   height: 36px;
 }
-/* line 12, ../sass/base.scss */
+/* line 14, ../sass/base.scss */
 .custom-bar .links ul {
-  display: inline-block;
+  display: block;
   width: 100%;
   height: 100%;
   list-style: none;
   margin: 0px;
   padding: 0px;
 }
-/* line 19, ../sass/base.scss */
+/* line 21, ../sass/base.scss */
 .custom-bar .links ul li {
   float: left;
   list-style: none;
   margin: 0px;
 }
-/* line 23, ../sass/base.scss */
+/* line 25, ../sass/base.scss */
 .custom-bar .links ul li.links-item {
-  padding: 5px 19px 0px 15px;
-  height: 31px;
+  padding: 0px 19px 0px 15px;
+  height: 36px;
+  vertical-align: middle;
 }
-/* line 27, ../sass/base.scss */
+/* line 29, ../sass/base.scss */
+.custom-bar .links ul li.links-item:last-child {
+  padding-right: 0px;
+}
+/* line 33, ../sass/base.scss */
 .custom-bar .links ul li.links-item:hover a, .custom-bar .links ul li.links-item:hover span {
   color: #fff;
 }
-/* line 30, ../sass/base.scss */
+/* line 36, ../sass/base.scss */
 .custom-bar .links ul li.links-item:hover .children {
   display: block;
 }
-/* line 34, ../sass/base.scss */
+/* line 40, ../sass/base.scss */
 .custom-bar .links ul li.links-item a, .custom-bar .links ul li.links-item span {
   display: inline-block;
   vertical-align: middle;
-  padding-top: 3px;
+  padding-top: 8px;
 }
-/* line 40, ../sass/base.scss */
+/* line 47, ../sass/base.scss */
+.custom-bar .links ul li.last {
+  padding: 0px 5px;
+  margin: 0px;
+  width: 20px;
+}
+/* line 52, ../sass/base.scss */
 .custom-bar .links ul li.logo {
   width: 69px;
   background-image: url("../images/logo.png");
@@ -93,7 +106,7 @@
   background-position: left 0px;
 }
 
-/* line 52, ../sass/base.scss */
+/* line 64, ../sass/base.scss */
 .children-bar {
   font-family: "Open Sans";
   float: left;
@@ -101,7 +114,7 @@
   top: 0px;
   width: 100%;
 }
-/* line 58, ../sass/base.scss */
+/* line 70, ../sass/base.scss */
 .children-bar .children-menu {
   float: left;
   position: absolute;
@@ -111,49 +124,49 @@
   padding: 10px 15px 13px 15px;
   margin-top: 36px;
 }
-/* line 66, ../sass/base.scss */
+/* line 78, ../sass/base.scss */
 .children-bar .children-menu.active {
   display: block;
 }
-/* line 69, ../sass/base.scss */
+/* line 81, ../sass/base.scss */
 .children-bar .children-menu ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
 }
-/* line 73, ../sass/base.scss */
+/* line 85, ../sass/base.scss */
 .children-bar .children-menu ul li {
   list-style: none;
   padding: 8px 0px;
   margin: 0px;
   line-height: 12px;
 }
-/* line 78, ../sass/base.scss */
+/* line 90, ../sass/base.scss */
 .children-bar .children-menu ul li:first-child {
   padding-top: 0px;
 }
-/* line 81, ../sass/base.scss */
+/* line 93, ../sass/base.scss */
 .children-bar .children-menu ul li:last-child {
   padding-bottom: 0px;
 }
-/* line 84, ../sass/base.scss */
+/* line 96, ../sass/base.scss */
 .children-bar .children-menu ul li a {
   font-size: 13px;
   color: #7b8998;
   text-decoration: none;
 }
-/* line 88, ../sass/base.scss */
+/* line 100, ../sass/base.scss */
 .children-bar .children-menu ul li a:hover {
   color: #fff;
 }
 
-/* line 98, ../sass/base.scss */
+/* line 110, ../sass/base.scss */
 .links-item a, .links-item span {
   color: #a7b1be;
   font-size: 13px;
   text-decoration: none;
 }
-/* line 103, ../sass/base.scss */
+/* line 115, ../sass/base.scss */
 .links-item span {
   display: inline-block;
   vertical-align: middle;
